src/objects/Vendor_Invoice_Check_Batch__c.object
<CustomObject>
    <fields>
        <fullName>A_P_Trade_Journal_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/P Trade Journal Line</label>
        <referenceTo>Financial_Journal_Line__c</referenceTo>
        <relationshipLabel>Vendor Invoice Check Batches</relationshipLabel>
        <relationshipName>A_P_Trade_Vendor_Invoice_Check_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Financial_Journal_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Financial Journal Line</label>
        <referenceTo>Financial_Journal_Line__c</referenceTo>
        <relationshipLabel>Vendor Invoice Check Batches (Cash Financial Journal Line)</relationshipLabel>
        <relationshipName>Vendor_Invoice_Check_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipLabel>Vendor Invoice Check Batches</relationshipLabel>
        <relationshipName>Vendor_Invoice_Check_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if check batch is voided.</description>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor Invoice Check Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VICB-{0000000}</displayFormat>
        <label>Vendor Invoice Check Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Check Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>